Adicionando e alterando configurações nas imagens das competições

--- a/competicoes-conquistas.html
+++ b/competicoes-conquistas.html
@@ -38,10 +38,12 @@
 
 
     <h1 class="title" id="competicoes">Competições</h1>
-        <figure>
             <img src="_imagens/logo-obr.png" alt="Olímpiada Brasileira de Robótica" class="competicoes" id="OBR">
             <figcaption class="legenda">Olimpíada Brasileira de Robótica <a href="http://www.obr.org.br/" target="_blank">(Saiba mais aqui!)</a></figcaption>
-        </figure>
+
+            <img src="_imagens/logo-fll.png" alt="Olímpiada Brasileira de Robótica" class="competicoes" id="Fll">
+            <figcaption class="legenda" id="fll">First Lego League <a href="http://www.portaldaindustria.com.br/sesi/canais/torneio-de-robotica/first-lego-league-brasil/" target="_blank">(Saiba mais aqui!)</a></figcaption>
+
     <footer id="rodape">
 
         <section>
