Ajustes nos links do menu de navegação

--- a/competicoes-conquistas.html
+++ b/competicoes-conquistas.html
@@ -20,11 +20,11 @@
         </header>
         <ul class ="menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#loja.html">Loja F5</a></li>
-            <li><a href="#competicoes-conquistas.html">Conquistas e Competições</a>
+            <li><a href="loja.html">Loja F5</a></li>
+            <li><a href="competicoes-conquistas.html">Conquistas e Competições</a>
                 <ul id="submenu">
-                    <li><a href="#competicoes-conquistas.html#">Conquistas</a></li>
-                    <li><a href="#competicoes-conquistas.html#competicoes">Competições</a></li>
+                    <li><a href="competicoes-conquistas.html">Conquistas</a></li>
+                    <li><a href="competicoes-conquistas.html#competicoes">Competições</a></li>
                 </ul>
             </li>    
             <li><a href="#">Área do participante</a></li>
