Alterando h3 do header

--- a/competicoes-conquistas.html
+++ b/competicoes-conquistas.html
@@ -14,7 +14,7 @@
         <header id="cabecalho"> 
             <hgroup>
                <h1>Eremec F5</h1>
-                <h3>Atualizando suas ideias</h3>
+                <h3>Atualizando ideias</h3>
             </hgroup>
             <img src="_imagens/teste.png" id="logo">
         </header>
