Testando e adicionando layouts de produtos

--- a/loja.html
+++ b/loja.html
@@ -35,6 +35,8 @@
 
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, fuga aperiam voluptatum nostrum officiis accusantium earum iusto in minima, ipsam hic fugit tempora id? Officiis, reiciendis. Quo velit temporibus repudiandae! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi beatae sit ratione praesentium unde minus nesciunt repellendus ex, quo quisquam asperiores ipsa ipsum. Eum alias dolor dignissimos cumque odio quo. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda iste omnis eum, cum blanditiis, repellendus harum nam, perferendis aliquid possimus quos! Quis nostrum velit minima est eos aperiam architecto iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nostrum quae aliquid accusamus fugit laudantium, nihil magnam ipsum nesciunt inventore. Alias esse eum consequuntur saepe ducimus assumenda corporis dignissimos. Sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat dicta ipsa voluptatum. Eveniet iusto eum pariatur excepturi modi perspiciatis, repellendus non necessitatibus doloremque magni, optio placeat cupiditate eius ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita rerum id animi laboriosam accusamus, dolorum molestias fugit, facilis ex sapiente dolor harum illo. Iure officia laborum autem accusamus? In! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos fuga blanditiis, repudiandae fugiat consectetur consequuntur libero non rem eligendi voluptates in harum perferendis ipsa illum eum saepe alias officia natus.
 
+    <img src="_imagens/caderno.jpg" alt="">
+
     <footer id="rodape">
 
         <section>
