--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="_css/estilo.css">
     <link rel="shortcut icon" href="_imagens/favicon.ico" type="image/x-icon">
     <link rel="icon" href="_imagens/favicon.ico" type="image/x-icon">
+    <script language="javascript" src="_javaScript/script.js"></script>
 </head>
 <body>
         <!--Menu fixo de navegação do site-->
